# PROOF

./: .gitignore  LICENSE  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
buyer-example/: .env.example  pyproject.toml
buyer-example/src/buyer_example/: agent.py
buyer-example/tests/unit/: conftest.py  test_agent.py  test_config.py
docs/: AGENT_SWARMS_SRS.md  ARCHITECTURE.md  BUYER_CREATION_GUIDE.md  GETTING_STARTED.md  MCP_PLUGIN_CREATION_GUIDE.md  PROTOCOL_SPECIFICATION.md  SELLER_CREATION_GUIDE.md  SELLER_SPEC.md  VERIFIABLE_EXECUTION.md
e2e-tests/: config.py  conftest.py  test_full_agent_swarms_workflow.py
examples/buyer-example/: Dockerfile
examples/buyer-example/src/buyer_example/: __main__.py  app.py  config.py  routes.py  services.py  tools.py
examples/buyer-example/tests/unit/: test_routes.py  test_services.py  test_tools.py
examples/buyer-template/: .env.example  Dockerfile  README.md  pyproject.toml
examples/buyer-template/src/buyer_example/: agent.py  app.py  config.py  routes.py  services.py  tools.py
examples/buyer-template/test_buyer/: conftest.py
examples/buyer-template/test_buyer/e2e/: config.py  conftest.py  test_chat.py
examples/buyer-template/test_buyer/unit/: conftest.py  test_agent.py  test_config.py  test_routes.py  test_services.py  test_tools.py
examples/buyer-template/tests/unit/: conftest.py  test_agent.py  test_config.py  test_tools.py
examples/mcp-server-template/: Dockerfile  pyproject.toml
examples/mcp-server-template/src/mcp_server_weather/: app.py
examples/mcp-server-template/src/mcp_server_weather/hybrid_routers/: pricing.py
examples/mcp-server-template/src/mcp_server_weather/weather/: module.py
examples/mcp-server-template/test_mcp_server/: test_cases_description.md  test_hybrid_routes.py
examples/mcp-server-template/test_mcp_server/e2e/: config.py  test_weather_hybrid.py  test_weather_mcp_only.py  test_weather_rest_only.py
examples/seller-template/: .env.example  Dockerfile  README.md  pyproject.toml  tool_pricing.yaml
examples/seller-template/src/seller_template/: __main__.py  app.py  config.py  dependencies.py  execution_service.py  logging_config.py  registration.py  task_repository.py
examples/seller-template/src/seller_template/api_routers/: admin.py  health.py
examples/seller-template/src/seller_template/db/: config.py  database.py  models.py
examples/seller-template/src/seller_template/hybrid_routers/: __init__.py  execute_router.py  pricing.py  tasks_router.py
examples/seller-template/src/seller_template/mcp_routers/: __init__.py  hello_robot.py
examples/seller-template/test_seller/: test_cases_description.md
examples/seller-template/test_seller/e2e/: config.py  conftest.py  test_hybrid.py  test_mcp_only.py  test_rest_only.py
examples/seller-template/test_seller/unit/: conftest.py  test_api_routes.py  test_execution_service.py  test_graph.py  test_mcp_routes.py  test_ratelimit_middleware.py  test_registration.py  test_task_repository.py
examples/seller-template/tests/integration/: config.py  conftest.py  test_hybrid.py
examples/seller-template/tests/unit/: test_execution_service.py  test_hybrid_routes.py  test_mcp_routes.py  test_ratelimit_middleware.py  test_task_repository.py
marketplace/: .env.example  Dockerfile  README.md  pyproject.toml
marketplace/src/marketplace/: __main__.py  agent_service.py  app.py  config.py  dependencies.py  in_memory_agent_repository.py  repository.py  router.py
marketplace/tests/: __init__.py  conftest.py
marketplace/tests/unit/: conftest.py  test_agent_service.py  test_config.py  test_in_memory_repository.py  test_repository.py  test_router.py
seller-template/: .env.example  Dockerfile  SELLER_CREATION_GUIDE.md  pyproject.toml
seller-template/src/seller_template/: app.py  config.py  task_repository.py
seller-template/src/seller_template/db/: database.py  models.py
seller-template/src/seller_template/hybrid_routers/: __init__.py  execute_router.py  tasks_router.py
seller-template/src/seller_template/mcp_routers/: analysis.py
seller-template/tests/: test_cases_description.md
seller-template/tests/integration/: config.py  conftest.py  test_mcp_only.py  test_rest_only.py
seller-template/tests/unit/: conftest.py  test_api_routes.py  test_hybrid_routes.py
tests/: .env.tests.example
tests/e2e/: config.py  conftest.py  test_agent_workflow.py  test_service_health.py
tests/e2e/features/: agent_workflow.feature  service_health.feature
tests/e2e/steps/: auth_steps.py  buyer_steps.py  execution_steps.py  health_steps.py  marketplace_steps.py  mcp_server_steps.py  registration_steps.py  seller_steps.py
xy_market/: README.md  pyproject.toml
xy_market/src/xy_market/: config.py  logging_config.py
xy_market/src/xy_market/buyer_sdk/: __init__.py  agent.py
xy_market/src/xy_market/clients/: __init__.py  base.py  marketplace.py  search_engine.py  seller.py
xy_market/src/xy_market/errors/: __init__.py  codes.py  exceptions.py
xy_market/src/xy_market/middleware/: __init__.py  logging.py  ratelimit.py  x402.py
xy_market/src/xy_market/models/: __init__.py  agent.py  execution.py  search.py
xy_market/src/xy_market/utils/: __init__.py  retry.py  validation.py
xy_market/test_marketplace/clients/: test_marketplace_client.py  test_seller_client.py
xy_market/test_marketplace/e2e/: test_marketplace_service.py
xy_market/test_marketplace/middleware/: test_ratelimit.py
xy_market/test_marketplace/models/: test_execution_models.py  test_search_models.py
xy_market/test_marketplace/utils/: test_validation.py
xy_market/tests/: __init__.py
xy_market/tests/clients/: test_marketplace_client.py  test_search_engine_client.py  test_seller_client.py
xy_market/tests/middleware/: test_ratelimit.py
xy_market/tests/models/: test_execution_models.py  test_search_models.py
xy_market/tests/utils/: test_validation.py
(+5 files in other folders)
